--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
-		<meta http-equiv="refresh" content="0; url=https://www.linkedin.com/in/joshvarone/" />
+		<title>Josh Varone</title>
+
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<style>
+			html, body {
+				margin: 0;
+				padding: 0;
+				min-height: 100vh;
+				min-width: 100vw;
+			}
+			
+			body {
+				text-align: center;
+				background-color: #131416;
+			}
+			
+			.container {
+				min-height: 100vh;
+				width: 100%;
+				display: table;
+			}
+
+			.inner-container {
+				display: table-cell;
+				text-align: center;
+				vertical-align: middle;
+			}
+		</style>
+
+		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 	</head>
 	<body>
-		
+		<div class="container">
+			<div class="inner-container">
+				<div style="padding: 20px;">
+					<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="joshvarone"><a class="LI-simple-link" href='https://www.linkedin.com/in/joshvarone'>Josh Varone</a></div>	</body>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
