--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
 				text-align: center;
 				vertical-align: middle;
 			}
+
+			a.LI-simple-link, 
+			a.LI-simple-link:link, 
+			a.LI-simple-link:visited {
+				text-decoration: none;
+				color: white;
+			}
+
+			a.LI-simple-link:hover,
+			a.LI-simple-link:active {
+				color: lightgray;
+			}
+
+			a.LI-simple-link span.main-name {
+				font-size: 200%;
+				font-family: Oswald, Arial, sans-serif;
+				font-weight: bold;
+			}
+
+			a.LI-simple-link span.sub-text {
+				font-family: 'Century Gothic', 'TW Cen MT', sans-serif;
+				font-style: italic;
+			}
 		</style>
 
 		<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
@@ -38,7 +61,7 @@
 		<div class="container">
 			<div class="inner-container">
 				<div style="padding: 20px;">
-					<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="joshvarone"><a class="LI-simple-link" href='https://www.linkedin.com/in/joshvarone'>Josh Varone</a></div>	</body>
+					<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="joshvarone"><a class="LI-simple-link" href='https://www.linkedin.com/in/joshvarone'><span class="main-name">Josh Varone</span><br><br><span class="sub-text">View profile on LinkedIn</span></a></div>
 				</div>
 			</div>
 		</div>
